# epidemic-simulator

./: .gitignore  LICENSE  README.md  index.html
cpp-simulator/: CMakeLists.txt  Makefile  Makefile_np  Makefile_parallel  README.md  agents_store.pb.cc  agents_store.pb.h  agents_store.proto  analysis.txt  cohorts.cc  cohorts.h  defaults.h  drive_simulator  drive_simulator.cc  drive_simulator_blr.sh  drive_simulator_mum.sh  grid-search.py  initializers.cc  initializers.h  intervention_primitives.cc  intervention_primitives.h  interventions.cc  interventions.h  launch_drive_sim.py  makefile_base.mk  makefile_base_proto.mk  models.cc  models.h  outputs.cc  outputs.h  plot_all_interventions.py  simulator.cc  simulator.h  testing.cc  testing.h  train_loader.cc  train_loader.h  updates.cc  updates.h
cpp-simulator/regression_tests/: copy_reference_files.py  regression_results.txt  regression_tests.py
cpp-simulator/regression_tests/input_files/: attendance_file_001.json  attendance_file_002.json  intervention_00.json  intervention_03.json  intervention_04.json  intervention_05.json  intervention_06.json  intervention_07.json  intervention_08.json  intervention_10.json  intervention_11.json  intervention_12.json  intervention_13.json  testing_protocol_001.json
cpp-simulator/regression_tests/output_files/attendance_file_001/: csvContent.csv  cumulative_mean_fraction_lambda_C.csv  cumulative_mean_fraction_lambda_RANDOM_COMMUNITY.csv  global_params.txt  infections_by_new_infectives.csv  mean_fraction_lambda_C.csv  num_affected.csv  num_cumulative_infective.csv  num_exposed.csv  (+6 more)
(+1221 files in other folders)
